Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
I encountered this
-- Arrow Fatal Error --
Invalid: Can't view array of type string as binary: not enough buffers for view type
In ../src/arrow/array.cc, line 1049, code: CheckInputAvailable()
In ../src/arrow/array.cc, line 1100, code: impl.MakeDataView(out_field, &out_data)
when trying to add a BinaryWithRepeats function to RandomArrayGenerator
std::shared_ptr<Array> out;
auto strings = StringWithRepeats(size, unique, min_length, max_length,
null_probability);
ABORT_NOT_OK(strings->View(binary(), &out));
return out;
It looks like utf8 <-> binary view simply aren't tested in array-view-test
Attachments
Issue Links
- links to
Issue resolved by pull request 5125
https://github.com/apache/arrow/pull/5125