ARROW-5992: [C++][Python] Support String->Binary in Array::View. Add Python bindings for Array::View

Note that calling View won't perform UTF-8 validation, but I think that is probably okay

Closes #5125 from wesm/ARROW-5992 and squashes the following commits:

360715e29 <Wes McKinney> Fix prior workaround for Array::View with binary type
9fc5a2f9b <Wes McKinney> Support Array::View from string to binary and back. Add Python bindings Array.view method

Authored-by: Wes McKinney <wesm+git@apache.org>
Signed-off-by: François Saint-Jacques <fsaintjacques@gmail.com>